@@ -622,10 +622,9 @@
 
 #define ROOM_NORMAL 1
 #define ROOM_SHOP 2
-#define ROOM_TEMPLE 3
-#define ROOM_CATHEDRAL 4
-#define ROOM_LIBRARY 5
-#define ROOM_LANDING_SITE 6
+#define ROOM_CATHEDRAL 3
+#define ROOM_LIBRARY 4
+#define ROOM_LANDING_SITE 5
 
 #define BEAM_EFFECTS 11
 
