@@ -9,6 +9,10 @@ is also provided AS IS and is probably completely unreadable.
 
 April 28 2003 Timo Kiviluoto <sonor@phpoint.fi>
 
+	* Vomiting on the altar of Valpurus in Attnam is now punished with death
+
+April 28 2003 Timo Kiviluoto <sonor@phpoint.fi>
+
 	* Ghosts now ignore sound damage
 	* Cloning a monster along with a stack now reduces the amount of copied items
 	  by one
